Added Swagger annotations to controllers and updated swagger.json file
