# class-notes/21-PersonelApi_Logs_Documents/src/controllers/department.js
@@ -9,6 +9,20 @@ const Department = require('../models/department')
 module.exports = {
     list: async (req, res) => {
 
+        /*
+        #swagger.tags = ["Departments"]
+        #swagger.summary = "List Departments"
+        #swagger.description = `
+            You can send query with endpoint for search[], sort[], page and limit.
+            <ul> Examples:
+                <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>
+                <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
+                <li>URL/?<b>page=2&limit=1</b></li>
+            </ul>
+        `
+        */
+
         const result = await res.getModelList(Department);
 
         res.status(200).send({
@@ -21,6 +35,17 @@ module.exports = {
     create: async (req, res) => {
 
         //todo check if there is a lead, if it is there make old user lead fieldname false 
+        /*
+            #swagger.tags = ["Departments"]
+            #swagger.summary = "Create Department"
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    $ref: '#/definitions/Department'
+                }
+            }
+        */
 
         const result = await Department.create(req.body);
 
@@ -31,6 +56,10 @@ module.exports = {
     },
 
     read: async (req, res) => {
+        /*
+            #swagger.tags = ["Departments"]
+            #swagger.summary = "Get Single Department"
+        */
         const result = await Department.findOne({ _id: req.params.id });
 
         res.status(200).send({
@@ -48,6 +77,17 @@ module.exports = {
     // upsertedCount: upsert işlemi ile kaç belgenin oluşturulduğunu belirtir.
 
     update: async (req, res) => {
+        /*
+            #swagger.tags = ["Departments"]
+            #swagger.summary = "Update Department"
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    $ref: '#/definitions/Department'
+                }
+            }
+        */
         const result = await Department.updateOne({ _id: req.params.id }, req.body, {
             runValidators: true,
         });
@@ -62,6 +102,19 @@ module.exports = {
     delete: async (req, res) => {
 
         //todo if a lead is deleted assign new lead to this department
+        /*
+        #swagger.tags = ["Departments"]
+        #swagger.summary = "List Departments"
+        #swagger.description = `
+            You can send query with endpoint for search[], sort[], page and limit.
+            <ul> Examples:
+                <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>
+                <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
+                <li>URL/?<b>page=2&limit=1</b></li>
+            </ul>
+        `
+        */
 
         const result = await Department.deleteOne({ _id: req.params.id });
 
